--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ember-ghost-casper-blog.css">
-    <link href="app/styles/emoji.css" rel="stylesheet">
+    <link href="styles/emoji.css" rel="stylesheet">
     {{content-for "head-footer"}}
   </head>
   <body>
