--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <link href="css/emoji.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Jared Szklenski</title>
