--- a/app/index.html
+++ b/app/index.html
@@ -25,12 +25,11 @@
     {{content-for "body-footer"}}
   </body>
   <footer>
-    <div class="jumbotron text-center">
-  <h1>Coming Soon</h1>
+  <h3>Stay Updated</h3>
 
   <br/><br/>
 
-  <p>Don't miss our launch date, request an invitation now.</p>
+  <p>Don't miss out on new pages!</p>
 
     <div class="form-horizontal form-group form-group-lg row">
       <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
@@ -42,6 +41,5 @@
     </div>
 
     <br/><br/>
-  </div>
   </footer>
 </html>
