--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
   <p>Don't miss out on new pages!</p>
 
-    <div class="form-horizontal form-group form-group-lg row">
+    <div class="alert alert-dismissible alert-warning">
       <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
         <input type="email" class="form-control" placeholder="Enter your e-mail address." autofocus="autofocus"/>
       </div>
