--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     {{content-for "body-footer"}}
   </body>
 
+  <footer>
   <h3>Stay Updated</h3>
 
   <br/><br/>
@@ -42,15 +43,7 @@
       <button class="btn btn-primary btn-lg btn-block">Request invitation</button>
   </div>
   </div>
-
-    <div class="alert alert-dismissible alert-warning">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-        <input type="email" class="form-control" placeholder="Enter your e-mail address." autofocus="autofocus"/>
-      </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-3">
-        <button class="btn btn-primary btn-lg btn-block">Request invitation</button>
-    </div>
-    </div>
+  </footer>
 
     <br/><br/>
 
